--- a/index(2).html
+++ b/index(2).html
@@ -42,6 +42,6 @@
 </html>
 <script>
     function novaGuia(){
-        window.open("JavaScript/index(3).html")
+        window.open("index(3).html")
     }
 </script>
