Adicionada a  imagem do algoritmo js.

--- a/index(3).html
+++ b/index(3).html
@@ -19,5 +19,6 @@
     <p id="resultado"></p>
 
     <script src="script.js"></script>
+    <img src="Captura de tela 2023-08-08 095512.png">
 </body>
 </html>
